SERVER-37398 Prove $out can no longer deadlock